fixed issue with overflow lobbies

--- a/src/assets/css/joingame.css
+++ b/src/assets/css/joingame.css
@@ -29,6 +29,8 @@ main {
     justify-content: space-between;
     gap: 0.5rem;
     border: solid 1px #000000;
+    max-height: 40vh;
+    overflow-y: auto;
 }
 
 .nav-bar {
